# Meusartifix

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Assets/Shaders/: CMakeLists.txt
Assets/Textures/: textures.txt
Engine/Audio/: audio.txt
Engine/Core/: Application.cpp  Application.hpp  Window.cpp  Window.hpp
Engine/Graphics/: Device.cpp  Device.hpp  Framebuffer.cpp  Framebuffer.hpp  Geometry.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  ImageView.cpp  ImageView.hpp  Instance.cpp  Instance.hpp  Pipeline.cpp  Pipeline.hpp  Queue.cpp  Queue.hpp  Renderer.cpp  Renderer.hpp  Surface.cpp  Surface.hpp  SwapChain.cpp  SwapChain.hpp  Vertex.hpp
Engine/IO/: File.cpp  File.hpp
Engine/Input/: input.txt
Engine/Physics/: physics.txt
Game/: main.cpp
Scripting/CSharp/: placeholder.txt
